fixed checkstyle warnings in metadata package