@@ -27,7 +27,8 @@ package de.sub.goobi.metadaten.search;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -41,13 +42,15 @@ import com.google.gson.Gson;
 import lombok.extern.log4j.Log4j2;
 
 /**
- * Loads data from a given URL and do serialization
+ * Loads data from a given URL and do serialization.
  *
  * @author Hemed Al Ruwehy 2021-03-12
  */
+//CHECKSTYLE:OFF
+// public constructor is needed, class gets extended
 @Log4j2
 public class JsonDataLoader {
-
+    //CHECKSTYLE:ON
     /**
      * Fetches data from the given JSON endpoint and return a list of Map representation of such structure. The method expects that the response is
      * JSON array
@@ -59,17 +62,17 @@ public class JsonDataLoader {
     public static List<Map<String, Object>> loadJsonList(String url) {
         log.debug("Fetching json data from: {}", url);
         List<Map<String, Object>> hits = new ArrayList<>();
-        try (InputStreamReader reader = new InputStreamReader(new URL(url).openStream())) {
+        try (InputStreamReader reader = new InputStreamReader(new URI(url).toURL().openStream())) {
             // List of hits from the response
             hits = (new Gson()).fromJson(reader, ArrayList.class);
-        } catch (IOException ioException) {
+        } catch (IOException | URISyntaxException ioException) {
             log.error("Error while fetching data from: {} {}", url, ioException);
         }
         return hits;
     }
 
     /***
-     * Loads XML file and return the instance of XMLConfiguration
+     * Loads XML file and return the instance of XMLConfiguration.
      *
      * @param fileUrl url of XML file
      * @return an XMLConfiguration
